// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OIbProxy check Proxy change 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="name"
    >
      label
    </label>
    <select
      class="oi-form-input form-select"
      id="name"
      name="name"
    >
      <option
        value=""
      />
    </select>
    <small
      class="form-text text-muted"
    >
      <div>
        some help text
      </div>
    </small>
  </div>
</div>
`;

exports[`OIbProxy check Proxy with no value 1`] = `<div />`;

exports[`OIbProxy check Proxy with value and help text 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="name"
    >
      label
    </label>
    <select
      class="oi-form-input form-select"
      id="name"
      name="name"
    >
      <option
        value=""
      />
    </select>
    <small
      class="form-text text-muted"
    >
      <div>
        some help text
      </div>
    </small>
  </div>
</div>
`;

exports[`OIbProxy check Proxy with value="proxy" 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="name"
    >
      label
    </label>
    <select
      class="oi-form-input form-select"
      id="name"
      name="name"
    >
      <option
        value=""
      />
    </select>
  </div>
</div>
`;

exports[`OIbProxy check Proxy with value="proxy" and no label 1`] = `
<div>
  <div
    class="mb-3"
  >
    <select
      class="oi-form-input form-select"
      id="name"
      name="name"
    >
      <option
        value=""
      />
    </select>
  </div>
</div>
`;
